<resources>
    <string name="app_name">TheHorecaMall</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="basket_items_count">(0)</string>
    <string name="the_horeca_mall">THE HORECA MALL</string>
    <string name="log_in">LOG IN</string>
    <string name="seller_log_in">SELLER LOG IN</string>
    <string name="categories">CATEGORIES</string>
    <string name="detegrents">DETEGRENTS</string>
    <string name="textiles">TEXTILES</string>
    <string name="equipment">EQUIPMENT</string>
    <string name="tableware">TABLEWARE</string>
    <string name="furniture">FURNITURE</string>
    <string name="inventory">INVENTORY</string>
    <string name="food_products">FOOD PRODUCTS</string>
    <string name="aromatization">AROMATIZATION</string>
    <string name="disinfection">DISINFECTION</string>
    <string name="consumables">CONSUMABLES</string>
    <string name="comparisons">COMPARISONS</string>
    <string name="favorites">FAVORITES</string>
    <string name="orders">ORDERS</string>
    <string name="change_language">CHANGE LANGUAGE</string>
    <string name="kazakhstan">KAZAKHSTAN</string>
    <string name="almaty">ALMATY</string>
    <string name="long_text">Mini bars, safes, electronic locks, hair dryers, carts and much more-thanks to direct deliveries from manufacturing plants, our customers get the best prices and certified products.</string>
    <string name="order">Order</string>
    <string name="cosmetics">COSMETICS</string>
    <string name="detegrents_child">Detegrents_child</string>
    <string name="furniture_and_equipment">Furniture and equipment</string>
    <string name="moisturizing_gel">Moisturizing gel "Take Care"</string>
    <string name="start_selling_at_the_horeca_mall">Start selling at The Horeca Mall</string>
    <string name="log_in_to_your_personal_account">Log in to your personal account</string>
    <string name="email_or_phone_number">Email or phone number</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="register">Register</string>
    <string name="first_and_last_name">First and Last Name</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="company_name">Company Name</string>
    <string name="password">Password</string>
    <string name="long_text_agreement">By registering at The Horeca Mall, you agree to the processing of personal data, including the assignment of processing and / or transfer to third parties. You have read and accept the User Agreement and the Privacy Policy.</string>
    <string name="continue1">Continue</string>
    <string name="your_unique_id_mnumber_is_4122">Your unique ID number is 4122</string>
    <string name="step_2">Step 2</string>
    <string name="company_information">Company information</string>
    <string name="bin_iin">BIN / IIN</string>
    <string name="select_vat">Select VAT</string>
    <string name="attach_the_documents">Attach the documents</string>
    <string name="_1_n_2_n_3">1)Один \n2)Два \n3)Три</string>
    <string name="download">Download</string>
    <string name="send">Send</string>
    <string name="step_3">Step 3</string>
    <string name="complete_page_long_text">The application for registration of the company has been sent! We will contact you soon by mail to discuss the terms of cooperation. If the email didn\'t arrive, check your spam folder. If the email is not there, write to partners@thehorecamall.com or try registering with another email address</string>
    <string name="complete">Complete</string>
    <string name="detegrents_small_caps">Detegrents</string>
    <string name="kitchen">Kitchen</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy printing and typesetting industry</string>
    <string name="tableware_sm_caps">tableware</string>
    <string name="input_telephone_number">Введите номер телефона</string>
    <string name="timer_text">Отправить повторно можно через 01:00</string>
    <string name="paste_code_please">На ваш номер отправлен код. Введите его.</string>
    <string name="paste_code">Введите код</string>
    <string name="cont">Продолжить</string>
    <string name="wrong_code">Неправильно введен код.\n Попробуйте еще раз.</string>
    <string name="message">Сообщение</string>
    <string name="add_office">Добавить офис</string>
    <string name="add_sclad">Добавить Склад</string>
    <string name="add_address">Другой склад</string>
    <string name="show_on_the_map">Указать на карте</string>
    <string name="api_key">AIzaSyDo1gsDHk5gnZdU8JhIfCcfMKn753JnxYQ</string>
    <string name="show_address">Укажите адрес</string>
</resources>