<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">


    <!-- Unique id -->
    <LinearLayout
        android:layout_marginTop="10dp"
        android:id="@+id/unique_id"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal"
        android:background="#81DADADA"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">
        <TextView
            android:layout_marginLeft="5dp"
            android:layout_weight="10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/your_unique_id_mnumber_is_4122"
            android:textColor="@color/black"/>
        <ImageView
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:src="@drawable/unique_id_download"/>
        <ImageView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:src="@drawable/unqiue_id_print"
            android:layout_marginRight="5dp"/>
    </LinearLayout>


    <TextView
        android:id="@+id/blue_heading_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/open_sans_extrabold"
        android:text="@string/step_2"
        android:textColor="@color/blue_heading"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/unique_id" />



    <TextView
        android:id="@+id/orange_heading_text"
        android:layout_marginTop="6dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_light"
        android:text="@string/company_information"
        android:textColor="@color/orange"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textFontWeight="800"
        app:layout_constraintTop_toBottomOf="@id/blue_heading_text"/>



    <TextView
        android:layout_marginBottom="3dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="42dp"
        app:layout_constraintBottom_toTopOf="@id/bin_and_iin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bin_iin"/>


    <EditText
        android:id="@+id/bin_and_iin"
        android:layout_marginTop="45dp"
        android:textSize="20sp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:minHeight="50dp"
        app:layout_constraintTop_toBottomOf="@id/orange_heading_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"/>


    <TextView
        android:layout_marginBottom="3dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="42dp"
        app:layout_constraintBottom_toTopOf="@id/select_vat_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_vat"/>


    <EditText
        android:id="@+id/select_vat_edit_text"
        android:layout_marginTop="45dp"
        android:textSize="20sp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:minHeight="50dp"
        app:layout_constraintTop_toBottomOf="@id/bin_and_iin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"/>


    <TextView
        android:id="@+id/attach_the_documents"
        app:layout_constraintTop_toBottomOf="@id/select_vat_edit_text"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attach_the_documents"/>


    <TextView
        android:id="@+id/files"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/attach_the_documents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1_n_2_n_3"
        android:textSize="10sp"/>



    <Button
        android:id="@+id/button_download"
        app:layout_constraintTop_toBottomOf="@+id/files"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download"
        android:background="@drawable/button_background_blue"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"/>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/upload_file_image"
        app:layout_constraintLeft_toRightOf="@id/button_download"
        app:layout_constraintBottom_toBottomOf="@id/button_download"
        app:layout_constraintRight_toRightOf="parent"/>


    <Button
        android:onClick="openCompletePageActivity_Page2"
        android:id="@+id/continue_button"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp"
        app:layout_constraintTop_toBottomOf="@id/button_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="58dp"
        android:text="@string/send"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/button_background_orange"/>


</androidx.constraintlayout.widget.ConstraintLayout>