<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">


    <TextView
        android:id="@+id/blue_heading_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/open_sans_extrabold"
        android:text="@string/start_selling_at_the_horeca_mall"
        android:textColor="@color/blue_heading"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/orange_heading_text"
        android:layout_marginTop="6dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_light"
        android:text="@string/log_in_to_your_personal_account"
        android:textColor="@color/orange"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textFontWeight="800"
        app:layout_constraintTop_toBottomOf="@id/blue_heading_text"/>



    <TextView
        android:layout_marginBottom="3dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="42dp"
        app:layout_constraintBottom_toTopOf="@id/email_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_or_phone_number"/>


    <EditText
        android:id="@+id/email_edit_text"
        android:layout_marginTop="45dp"
        android:textSize="20sp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:minHeight="50dp"
        app:layout_constraintTop_toBottomOf="@id/orange_heading_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"/>


    <TextView
        android:layout_marginBottom="3dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="42dp"
        app:layout_constraintBottom_toTopOf="@id/password_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="42dp"
        android:layout_marginBottom="3dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/forgot_password"
        android:textColor="@color/blue_heading"
        app:layout_constraintBottom_toTopOf="@id/password_edit_text"
        app:layout_constraintRight_toRightOf="parent" />


    <EditText
        android:id="@+id/password_edit_text"
        android:layout_marginTop="45dp"
        android:textSize="20sp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:minHeight="50dp"
        app:layout_constraintTop_toBottomOf="@id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"/>



    <Button
        android:id="@+id/log_in_button"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp"
        app:layout_constraintTop_toBottomOf="@id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="58dp"
        android:textColor="@color/white"
        android:background="@drawable/button_background_orange"
        android:textAllCaps="false"
        android:text="Log in" />




    <Button
        android:onClick="openRegisterActivity"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp"
        app:layout_constraintTop_toBottomOf="@id/log_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="58dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:background="@drawable/edit_text_background"/>


</androidx.constraintlayout.widget.ConstraintLayout>