<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/image_header"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/circle_grey"/>

    <TextView
        android:id="@+id/text_header"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/image_header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:fontFamily="@font/roboto"
        android:textFontWeight="700"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paste_code"/>

    <TextView
        android:id="@+id/small_header_text"
        android:layout_marginTop="15dp"
        android:textColor="#404040"
        app:layout_constraintTop_toBottomOf="@id/text_header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:fontFamily="@font/roboto"
        android:textFontWeight="400"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paste_code_please"/>



    <RelativeLayout
        android:id="@+id/phone_number_container"
        app:layout_constraintTop_toBottomOf="@id/small_header_text"
        android:layout_marginTop="75dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/hint_text"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:textSize="37sp"
            android:gravity="right"
            android:text="* * * * * *"/>

        <com.vicmikhailau.maskededittext.MaskedEditText
            android:id="@+id/get_code"
            android:layout_width="160dp"
            android:inputType="phone"
            android:text=""
            android:letterSpacing="0.2"
            app:mask="******"
            android:singleLine="true"
            android:textSize="33sp"
            android:gravity="left"
            android:background="@null"
            android:layout_height="wrap_content"/>


    </RelativeLayout>

    <TextView
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        android:id="@+id/wrongCode"
        android:textColor="#ED3636"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_number_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wrong_code"/>

    <TextView
        app:layout_constraintTop_toBottomOf="@id/wrongCode"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer_text"/>



    <Button
        android:onClick="sendCodeAndContinue"
        android:id="@+id/sendCode"
        app:layout_constraintTop_toBottomOf="@id/timer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="81dp"
        android:text="@string/cont"
        android:paddingLeft="92dp"
        android:paddingRight="92dp"
        android:paddingTop="17dp"
        android:paddingBottom="17dp"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textFontWeight="500"
        android:fontFamily="@font/roboto"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>