<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto">


            <TextView
                android:id="@+id/blue_heading_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/open_sans_extrabold"
                android:text="@string/start_selling_at_the_horeca_mall"
                android:textColor="@color/blue_heading"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/orange_heading_text"
                android:layout_marginTop="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_light"
                android:text="@string/log_in_to_your_personal_account"
                android:textColor="@color/orange"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textFontWeight="800"
                app:layout_constraintTop_toBottomOf="@id/blue_heading_text"/>



            <TextView
                android:layout_marginBottom="3dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="42dp"
                app:layout_constraintBottom_toTopOf="@id/first_and_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_and_last_name"/>


            <EditText
                android:id="@+id/first_and_last_name"
                android:layout_marginTop="45dp"
                android:textSize="20sp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:minHeight="50dp"
                app:layout_constraintTop_toBottomOf="@id/orange_heading_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"/>


            <TextView
                android:layout_marginBottom="3dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="42dp"
                app:layout_constraintBottom_toTopOf="@id/phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"/>


            <EditText
                android:id="@+id/phone_number"
                android:layout_marginTop="45dp"
                android:textSize="20sp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:minHeight="50dp"
                app:layout_constraintTop_toBottomOf="@id/first_and_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"/>


            <TextView
                android:layout_marginBottom="3dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="42dp"
                app:layout_constraintBottom_toTopOf="@id/email_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"/>


            <EditText
                android:id="@+id/email_edit_text"
                android:layout_marginTop="45dp"
                android:textSize="20sp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:minHeight="50dp"
                app:layout_constraintTop_toBottomOf="@id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"/>




            <TextView
                android:layout_marginBottom="3dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="42dp"
                app:layout_constraintBottom_toTopOf="@id/company_name_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_name"/>


            <EditText
                android:id="@+id/company_name_edit_text"
                android:layout_marginTop="45dp"
                android:textSize="20sp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:minHeight="50dp"
                app:layout_constraintTop_toBottomOf="@id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"/>



            <TextView
                android:layout_marginBottom="3dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="42dp"
                app:layout_constraintBottom_toTopOf="@id/password_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"/>


            <EditText
                android:id="@+id/password_edit_text"
                android:layout_marginTop="45dp"
                android:textSize="20sp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:minHeight="50dp"
                app:layout_constraintTop_toBottomOf="@id/company_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"/>



            <TextView
                android:layout_marginBottom="3dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="42dp"
                app:layout_constraintBottom_toTopOf="@id/repeat_password_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Repeat the password"/>


            <EditText
                android:id="@+id/repeat_password_edit_text"
                android:layout_marginTop="45dp"
                android:textSize="20sp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:minHeight="50dp"
                app:layout_constraintTop_toBottomOf="@id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"/>


            <CheckBox
                android:id="@+id/checkbox"
                app:layout_constraintTop_toBottomOf="@id/repeat_password_edit_text"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="32dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/checkbox_text_i_am_not_robot"
                android:fontFamily="@font/open_sans"
                android:layout_marginTop="7dp"
                app:layout_constraintLeft_toRightOf="@id/checkbox"
                app:layout_constraintTop_toBottomOf="@id/repeat_password_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="I am not a robot"/>



            <TextView
                android:id="@+id/privacy_policy"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/checkbox_text_i_am_not_robot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:text="@string/long_text_agreement"/>



            <Button
                android:onClick="openRegisterActivity_Page2"
                android:id="@+id/continue_button"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="42dp"
                android:layout_marginRight="42dp"
                app:layout_constraintTop_toBottomOf="@id/privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="58dp"
                android:text="@string/continue1"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:background="@drawable/button_background_orange"/>

            <View
                app:layout_constraintTop_toBottomOf="@id/continue_button"
                android:layout_width="match_parent"
                android:layout_height="30dp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</ScrollView>
